@@ -26,7 +26,8 @@ Test::Pod requires the following modules:
 Copyright and Licence
 ---------------------
 
-Copyright 2006-2010, Andy Lester. Some Rights Reserved.
+Copyright 2006-2010, Andy Lester; 2010-2015 David E. Wheeler. Some Rights
+Reserved.
 
 This module is free software; you can redistribute it and/or modify it under
 the same terms as Perl itself.
