@@ -9,6 +9,9 @@ Change log for Test::Pod
     * Simplified some of the matching code. Patch from Luca Ferrari.
     * Transferred ownership of the repository to the perl-pod organization on
       GitHub.
+    * Removed the Pod testing test from the distribution. Seems silly for a
+      module designed for testing Pod, right? But it's considered best
+      practice to do Pod testing in development only, not in a release.
 
 1.48 - 2013-05-06T04:47:00Z
     * Fixed test failure with versions of Pod::Simple lower than 3.24. Thanks
